# Deteccao_Facial_OpenCV

./: Deteccao_Facial_OpenCV.ipynb  README.md  Reconhecimento_Facial_Atividade1.ipynb  pyproject.toml
.ipynb_checkpoints/: Deteccao_Facial_OpenCV-checkpoint.ipynb  Reconhecimento_Facial_Atividade1-checkpoint.ipynb
